remove unuse and add rest provider